# barrucadu.co.uk

./: .Link  .gitignore  .gitmodules  .htaccess  404.html  Jenkinsfile  README.markdown  README.md  aboutme.markdown  barrucadu-co-uk.cabal  barrucadu.yaml  build  caddy.conf.m4  flake.nix  hakyll.hs  hakyll.lhs  index.html  index.markdown  local-build.sh  nginx.conf.m4  projects.markdown  publications.html  publications.markdown  requirements-freeze.txt  requirements.txt  rsync.exclude  stack.yaml  style.css
_templates/: _experience.html  _layout.html  _research.html  akk.html  atom.xml  default.html  feed.html  index.html  layout.html  page.html  plain.html  robots.txt  sitemap.xml
blog/: 2010-01-13 00:10 New blog; website plans.md  2010-01-13 08:29 Arch Hurd.md  2010-01-13 09:38 MPX.md  2010-01-13 20:54 Warm fuzzy feeling.md  2010-01-14 11:08 My Server.md  2010-01-16 22:40 Arch Hurd is bootable!.md  2010-01-18 20:24 Arch Hurd has a logo and a package!.md  2010-01-29 11:11 Why Hurd?.md  2010-02-02 20:03 XMPP Status Updates.md  2010-02-07 00:41 Mandelbrot and Julia generator.md  2010-02-12 22:40 Half Term Week, and, one month of Spork Bomb.md  2010-02-16 19:01 MPDDP 2: Functionally complete.md  2010-02-18 22:36 New HDD for my server.md  2010-02-19 11:04 Network Block Device.md  2010-02-20 19:59 MPDDP 2 Signals.md  2010-03-04 18:11 Cthulhu fhtagn.md  2010-03-10 16:31 Azathoth.md  2010-03-29 12:53 Barrucadu.com again!.md  2010-04-02 23:29 Home backup solution.md  2010-04-11 23:31 Installing Arch Hurd with Pacman.md  2010-04-27 23:15 Bye Erasmus.md  (+39 more)
content/: 404.markdown  (+5 more)
(+222 files in other folders)
