name:                barrucadu-co-uk
version:             0.1.0.0
synopsis:            Personal website
homepage:            http://www.barrucadu.co.uk
author:              Michael Walker
maintainer:          mike@barrucadu.co.uk
build-type:          Simple
cabal-version:       >=1.10

executable hakyll
  main-is:             hakyll.hs
  build-depends:       base >=4.7 && <5, hakyll, hakyll-contrib-hyphenation
  default-language:    Haskell2010
  ghc-options:         -Wall
